--- a/BikeLane_Calculator.html
+++ b/BikeLane_Calculator.html
@@ -10,6 +10,10 @@
       --accent: #f4f4f4;
       --text: #333;
     }
+    /* ✅ Global box-sizing fix */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--accent);
@@ -62,17 +66,14 @@
       max-width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
-      display: block;          /* allows horizontal scrolling */
+      display: block;
       overflow-x: auto;
-      white-space: nowrap;     /* prevents awkward breaks */
     }
     th, td {
       border: 1px solid #ccc;
       padding: 10px;
       text-align: left;
       vertical-align: top;
-      word-wrap: break-word;
-      white-space: normal;     /* allows wrapping inside cells */
     }
     th {
       background-color: var(--primary);
@@ -83,31 +84,17 @@
       color: #555;
       margin-top: 10px;
     }
-    .sup-btn {
-      display: inline-block;
-      font-size: 0.6em;
-      line-height: 1;
-      padding: 0 3px;
-      margin: 0 0 0 2px;
-      vertical-align: super;
-      border: 1px solid #ccc;
-      background: green;
-      color: white;
-      border-radius: 3px;
-      cursor: default;
-      width: auto;
-      height: auto;
+    sup a {
+      text-decoration: none;
+      color: inherit;
     }
-    @media (max-width: 600px) {
-      .container {
-        padding: 15px;
-      }
-      h2 {
-        font-size: 1.5em;
-      }
-      table, th, td {
-        font-size: 0.9em;
-      }
+    sup a:hover {
+      text-decoration: underline;
+    }
+    .formula {
+      font-size: 0.85em;
+      text-transform: uppercase;
+      color: #555;
     }
   </style>
 </head>
@@ -135,8 +122,8 @@
       const savings = parseFloat(document.getElementById('savings').value);
       const years = parseFloat(document.getElementById('years').value);
 
-      const multiplier = 3; // Hardcoded health benefit multiplier
-      const lifetimeYears = 20; // Hardcoded infrastructure lifetime
+      const multiplier = 3;
+      const lifetimeYears = 20;
 
       const cyclistsFinancial = investment / (savings * years);
       const totalCyclistSavings = cyclistsFinancial * savings * years;
@@ -150,56 +137,50 @@
       document.getElementById('output').innerHTML = `
         <table>
           <tr>
-            <th>Question</th>
-            <th>Answer</th>
+            <th>FAQs</th>
           </tr>
           <tr>
-            <td>How many cyclists would Saint John need to return $${investment.toLocaleString()} in the form of personal savings to residents who are cyclists?</td>
             <td>
-              If the city invested $${investment.toLocaleString()} and attracted ${Math.round(cyclistsFinancial)} regular cyclists, each saving $${savings.toLocaleString()} annually, the combined personal savings of those cyclists over ${years} years would be $${totalCyclistSavings.toLocaleString()}.
-              <br><br>
-              <em>Formula: INVESTMENT ÷ (SAVINGS × YEARS) = ${investment} ÷ (${savings} × ${years})</em>
+              <p><strong>Question: How many regular cyclists would the city need to return $${investment.toLocaleString()} in the form of personal savings regular cyclists?</strong></p>
+              <p><strong>Answer:</strong> If the city invested $${investment.toLocaleString()} and attracted ${Math.round(cyclistsFinancial)} regular cyclists, each saving $${savings.toLocaleString()} annually, the combined personal savings of those regular cyclists over ${years} years would be $${totalCyclistSavings.toLocaleString()}.</p>
+              <p class="formula"><em>Formula: INVESTMENT ÷ (SAVINGS × YEARS) = ${investment} ÷ (${savings} × ${years})</em></p>
             </td>
           </tr>
           <tr>
-            <td>The highest quality studies indicate that for every $1 spent on bikelanes, $${multiplier} in health costs are reduced (over ${lifetimeYears} years).
-              <button class="sup-btn">1</button>
-              <br><br>
-              How much would Provincial health care costs reduce over ${years} years?
-            </td>
             <td>
-              Over ${years} years, the initial investment of $${investment.toLocaleString()} is projected to reduce Provincial health care costs by approximately $${periodHealthCostReduction.toLocaleString()}, based on an annual saving of $${annualHealthCostReduction.toLocaleString()} and a total lifetime saving of $${lifetimeHealthCostReduction.toLocaleString()} over ${lifetimeYears} years.
-              <br><br><em>Formula: LIFETIME = INVESTMENT × MULTIPLIER; ANNUAL = LIFETIME ÷ LIFETIME_YEARS; PERIOD = ANNUAL × YEARS</em>
+              <p><strong>Question: The highest quality studies indicate that for every $1 spent on bikelanes, $${multiplier} in health costs are reduced (over ${lifetimeYears} years)<sup><a href="#note1">1</a></sup>. How much would Provincial health care costs reduce over ${years} years?</strong></p>
+              <p><strong>Answer:</strong> Over ${years} years, the initial investment of $${investment.toLocaleString()} is projected to reduce Provincial health care costs by approximately $${periodHealthCostReduction.toLocaleString()}, based on an annual saving of $${annualHealthCostReduction.toLocaleString()} and a total lifetime saving of $${lifetimeHealthCostReduction.toLocaleString()} over ${lifetimeYears} years.</p>
+              <p class="formula"><em>Formula: LIFETIME = INVESTMENT × MULTIPLIER; ANNUAL = LIFETIME ÷ LIFETIME_YEARS; PERIOD = ANNUAL × YEARS</em></p>
             </td>
           </tr>
           <tr>
-            <td>What is the total personal financial benefit to regular cyclists + reduction in Provincial health care spending (over ${years} years)?</td>
             <td>
-              📈 Total ${years}-year economic return: <strong>$${totalBenefit.toLocaleString()}</strong><br>
+              <p><strong>Question: What is the total personal financial benefit to regular cyclists + reduction in Provincial health care spending (over ${years} years)?</strong></p>
+              <p><strong>Answer:</strong> 📈 Total ${years}-year economic return: <strong>$${totalBenefit.toLocaleString()}</strong></p>
               <ul>
                 <li>Personal financial benefit to regular cyclists (over ${years} years): $${totalCyclistSavings.toLocaleString()}</li>
                 <li>Reduction in Provincial health care spending (over ${years} years): $${periodHealthCostReduction.toLocaleString()}</li>
               </ul>
-              <br>
-              <em>Formula: TOTAL = PERSONAL_BENEFIT + PROVINCIAL_HEALTH_CARE_REDUCTION = ${totalCyclistSavings.toLocaleString()} + ${periodHealthCostReduction.toLocaleString()}</em>
+              <p class="formula"><em>Formula: TOTAL = PERSONAL_BENEFIT + PROVINCIAL_HEALTH_CARE_REDUCTION = ${totalCyclistSavings.toLocaleString()} + ${periodHealthCostReduction.toLocaleString()}</em></p>
             </td>
           </tr>
           <tr>
-            <td>What is the total personal financial benefit to regular cyclists + reduction in Provincial health care spending (over ${lifetimeYears} years)?</td>
             <td>
-              📈 Total ${lifetimeYears}-year economic return: <strong>$${totalLifetimeBenefit.toLocaleString()}</strong><br>
+              <p><strong>Question: What is the total personal financial benefit to regular cyclists + reduction in Provincial health care spending (over ${lifetimeYears} years)?</strong></p>
+              <p><strong>Answer:</strong> 📈 Total ${lifetimeYears}-year economic return: <strong>$${totalLifetimeBenefit.toLocaleString()}</strong></p>
               <ul>
                 <li><strong>Initial investment amount:</strong> $${investment.toLocaleString()}</li>
                 <li>Personal financial benefit to regular cyclists (over ${lifetimeYears} years): $${lifetimeCyclistSavings.toLocaleString()}</li>
                 <li>Reduction in Provincial health care spending (over ${lifetimeYears} years): $${lifetimeHealthCostReduction.toLocaleString()}</li>
               </ul>
-              <br>
-              <em>Formula: TOTAL_LIFETIME = PERSONAL_LIFETIME_BENEFIT + PROVINCIAL_LIFETIME_HEALTH_CARE_REDUCTION = ${lifetimeCyclistSavings.toLocaleString()} + ${lifetimeHealthCostReduction.toLocaleString()}</em>
+              <p class="formula"><em>Formula: TOTAL_LIFETIME = PERSONAL_LIFETIME_BENEFIT + PROVINCIAL_LIFETIME_HEALTH_CARE_REDUCTION = ${lifetimeCyclistSavings.toLocaleString()} + ${lifetimeHealthCostReduction.toLocaleString()}</em></p>
             </td>
           </tr>
         </table>
-      <p class="note">
-          *Note<sup>1</sup>: The $${multiplier} figure is based on total health care savings over the assumed ${lifetimeYears}-year lifetime of the infrastructure, as reported in <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0246419" target="_blank">peer‑reviewed studies</a>. The ${years}-year figure shown here is a proportional estimate for illustration.*
+        <p class="note" id="note1">
+          *Note<sup>1</sup>: The $${multiplier} figure is based on total health care savings over the assumed ${lifetimeYears}-year lifetime of the infrastructure, as reported in 
+          <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0246419" target="_blank">peer‑reviewed studies</a>. 
+          The ${years}-year figure shown here is a proportional estimate for illustration.*
         </p>
       `;
     }
