--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
     transition: background 0.3s ease-in-out;
   }
 
+input[type="range"] {
+  appearance: none;
+  width: 100%;
+  height: 8px;
+  border-radius: 5px;
+  background: linear-gradient(to right, var(--primary) 0%, #ccc 0%);
+  outline: none;
+  position: relative;
+}
+
 input[type="range"]::-webkit-slider-thumb {
   appearance: none;
   width: 20px;
@@ -207,7 +217,9 @@ input[type="range"]::-webkit-slider-thumb {
   cursor: pointer;
   border: none;
   box-shadow: 0 0 2px rgba(0,0,0,0.2);
-  transform: translateX(calc(-50% + 10px));
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 input[type="range"]::-moz-range-thumb {
@@ -217,8 +229,11 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 4px;
   cursor: pointer;
   border: none;
-  transform: translateX(calc(-50% + 10px));
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
+
 
 
   .note {
