--- a/index.html
+++ b/index.html
@@ -86,14 +86,17 @@
       cursor: pointer;
       border: none;
     }
+.card {
+  background: var(--card);
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  padding: 0.75rem 1rem 1rem 1rem; /* top right bottom left */
+  margin: 0.5rem 0 1rem 0;         /* top right bottom left */
+}
+.card h2 {
+  margin-top: 0;
+}
 
-    .card {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 8px;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
 
     .card h2 {
       font-size: 1.1rem;
